...
                  name="mail-outline"
                  size={20}
                  color={focusedField === 'email' ? Colors.accent : Colors.systemGray}
                  style={styles.inputIcon}
                />
                <TextInput
                  testID="login-input-email"
                  ref={emailRef}
                  style={styles.input}
                  placeholder={t('auth.emailPlaceholder')}
                  placeholderTextColor={Colors.systemGray2}
                  value={email}
                  onChangeText={setEmail}
...
